<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ariel.calculoarea.MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selecione_uma_figura"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textSize="@dimen/TextSize"
        android:fontFamily="serif"
        android:textStyle="normal|bold"
        android:textAlignment="center" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:gravity="center"
        android:id="@+id/rgFigura"
        >
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/circulo"

            android:buttonTint="#FF8C00"
            android:duplicateParentState="false"
            android:fontFamily="serif"
            android:textStyle="normal|bold"
            android:textColor="#000000"
            android:checked="false" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/triangulo"
            android:buttonTint="#FF8C00"
            android:checked="false"
            android:fontFamily="serif"
            android:textStyle="normal|bold"
            android:textColor="#000000" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retangulo"
            android:checked="false"
            android:buttonTint="#FF8C00"
            android:fontFamily="serif"
            android:textStyle="normal|bold"
            android:textColor="#000000" />

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avancar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="#FF8C00"
        android:textColor="#FFFFFF"
        android:onClick="escolheFigura"
        />

</RelativeLayout>
