<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_circulo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ariel.calculoarea.CirculoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dados_do_circulo_cm"
        style="@style/MensagemInicialTelasFiguras"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raio"
        android:layout_marginTop="@dimen/Telas_2_medidas_TV1"
        style="@style/FonteMedidas"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Telas_2_medidas_ED1"
        android:id="@+id/edRaio"
        android:inputType="number"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avancar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="cliqueAvancarCirculo"
        android:backgroundTint="#FF8C00"
        android:textColor="#FFFFFF"
        />


</RelativeLayout>